# vehicle-coordination

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  README.rst  requirements-doc.txt  requirements-full.txt
components/: Readme.rst  index.md
components/camera_server/: README.md  README.rst  requirements.txt
components/coordination/: Cargo.toml  Makefile  README.md  README.rst  build.rs
components/coordination/.cargo/: config.toml
components/coordination/evaluation/01/: 1665414618.463184s.json  1665414648.488959s.json  1665414663.150032s.json  1665414707.07416s.json  1665414750.032275s.json  1665414765.27953s.json  1665414779.224358s.json  1665414852.322892s.json  1665414867.027708s.json  1665414897.687763s.json  1665414911.931306s.json  1665414927.439727s.json  1665414971.504587s.json  1665414987.244282s.json  1665415001.874747s.json  1665415034.600595s.json  1665415064.837104s.json  1665415106.770732s.json  1665415122.51427s.json  1665415171.095304s.json  1665415188.590658s.json  1665415238.503763s.json  1665415290.114244s.json  1665415305.375868s.json  1665415337.686355s.json  1665415354.30987s.json  1665415425.335747s.json  1665415442.998043s.json  1665415460.295183s.json  1665415476.477927s.json  1665415509.528685s.json  1665415542.838094s.json  1665415688.601319s.json  1665416946.820256s.json  1665416983.098953s.json  1665417038.000707s.json  1665417056.909708s.json  1665417114.102122s.json  1665417172.860686s.json  1665417308.545187s.json  (+17 more)
components/coordination/evaluation/02/: 1665413859.463967s.json  1665413872.045681s.json  1665414215.740607s.json  1665414225.456221s.json  1665414245.187862s.json  1665414254.188064s.json  1665414283.34125s.json  1665414303.528918s.json  1665414322.365551s.json  1665414332.456721s.json  1665414361.301407s.json  1665414379.639578s.json  1665418060.304047s.json  1665418115.982101s.json  1665418151.87294s.json  1665418186.97138s.json  1665418207.165886s.json  1665418234.396757s.json  1665418244.525796s.json  1665418263.341278s.json  1665418343.766139s.json  1665418355.784048s.json  1665418398.191682s.json  1665418453.71509s.json  1665418464.21331s.json  1665418487.450538s.json  1665418495.728881s.json  1665418506.3707s.json  1665418559.681913s.json  1665418591.676494s.json  1665418602.467591s.json  1665418614.30796s.json  1665418652.365994s.json  1665418663.473432s.json  1665418675.430445s.json  1665418686.240501s.json
components/coordination/evaluation/04/: 1665416210.163308s.json  1665416224.159161s.json  1665416237.699859s.json  1665416244.83806s.json  1665416304.409077s.json  1665416312.914504s.json  1665416319.632522s.json  1665416333.400862s.json  1665416347.406456s.json  1665416360.7091s.json  1665416367.505578s.json  1665416396.691127s.json  1665416410.304277s.json  1665416424.36442s.json  1665416430.993751s.json  1665416444.913395s.json  1665416465.881459s.json  1665416473.233388s.json  1665416480.245503s.json  1665416493.311478s.json  1665416513.493742s.json  1665419107.706717s.json  1665421464.38835s.json  1665421492.379705s.json  1665421498.86865s.json  1665421511.902445s.json  1665421531.127254s.json  1665421538.12004s.json  1665421564.294032s.json  1665421590.543353s.json  1665421596.565329s.json  1665421622.204622s.json  1665421634.565238s.json  1665421654.641521s.json  1665421673.78039s.json  1665421680.097775s.json  1665421692.257231s.json  1665421698.556705s.json
components/coordination/evaluation/08/: 1665422863.431212s.json  1665422870.378688s.json  1665422882.957843s.json  1665422909.212509s.json  1665422931.968679s.json  1665422956.505015s.json  1665422962.657801s.json  1665422968.569718s.json  1665422975.233197s.json  1665423005.837732s.json  1665423022.452167s.json  1665423033.553028s.json  1665423038.991341s.json  1665423045.298688s.json  1665423050.534029s.json  1665423062.417623s.json  1665423092.643089s.json  1665423104.718115s.json
components/coordination/scripts/: graph.py  transfer.sh
components/coordination/src/: api.rs  camera_interface.rs  interface.rs  lib.rs  main.rs  math.rs  orca_car.rs  picar.rs  util.rs  wheels.rs
components/fast-particle-filter/pf/benchmark-utils/: CMakeLists.txt  MeasurementGenerator.hpp  main.cpp
components/fast-particle-filter/pf/c_implementation/: CMakeLists.txt  ParticleFilter.py  ParticleFilterC.py  ParticleFilterConsumer.cpp  ParticleFilterConsumer.hpp  debug.h  fix-point-particle-filter.c  floating-point-particle-filter.c  floating-point-particle-filter.h  particle-belief-propagation.c  particle-belief-propagation.h  pfCFFI.py  pfCFFIBuilder.py  test-particle-filter.c  util.c  util.h
components/fast-particle-filter/pf/numpy_python_implementation/: CMakeLists.txt  boost-consumer.cpp  particle-filter.py
components/fast-particle-filter/pf/opencl-implementation/: CMakeLists.txt
components/fast-particle-filter/pf/opencl-implementation/src/: main.cpp
components/fast-particle-filter/pf/opencl_implementation/: CMakeLists.txt
components/fast-particle-filter/pf/opencl_implementation/src/: ParticleFilterOpenCL.hpp  importance_sampling.cl  main.cpp  normalize.cl  resample.cl
components/picar-wheels/: .gitlab-ci.yml  Cargo.toml  Makefile  README.md  build.rs
components/picar-wheels/config/: picar.service
components/picar-wheels/proto/: picar.proto
components/picar-wheels/scripts/: transfer.sh
components/picar-wheels/src/: client.rs  daemon.rs
components/ros/src/localization_package/lib/: CMakeLists.txt
components/ros/src/orcar_interfaces/: CMakeLists.txt  Readme.rst  package.xml
components/ros/src/orcar_interfaces/msg/: RadioMessage.msg  RadioPacket.msg  TaggedRadioPacket.msg
components/ros/src/orcar_interfaces/protobuf/: Particles.proto
components/ros/src/orcar_localization/: CMakeLists.txt  Readme.rst  package.xml
components/ros/src/orcar_localization/launch/: launch_localization.xml
components/ros/src/orcar_localization/lib/: compile_commands.json  util.c
components/ros/src/orcar_localization/src/: belief_propagation.cpp  debug.h  particle-belief-propagation.h
resources/: component_diagram.vpp  gitlab-ci.yml  index.md
(+388 files in other folders)
