[package]
name = "coordination"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "picar-coordination"
path = "src/bin/picar_coordination.rs"

[[bin]]
name = "camera-interface"
path = "src/bin/camera_interface.rs"

[dependencies]
orca-rs = "0.3.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
], default-features = false }
tokio = { version = "1.20.0", features = ["full"] }
tonic = "0.7"
prost = "0.10"
log = "0.4.17"
env_logger = "0.9.0"
futures = "0.3.21"
async-channel = "1.6.1"


[build-dependencies]
tonic-build = "0.7"

[features]
default = []
pi = []
native = []
simulation = []
evaluation = []

[profile.release]
strip = true    # Automatically strip symbols from the binary.
panic = "abort"
lto = true
