[package]
name = "picar-wheels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "picar-daemon"
path = "src/daemon.rs"

[[bin]]
name = "picar"
path = "src/client.rs"
 
[dependencies]
rppal = "0.13.1"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
async-channel = "1.6.1"

[build-dependencies]
tonic-build = "0.7"
